--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=bonnesante_api
-spring.datasource.url=jdbc:mysql://localhost:3306/bonnesante_api
+spring.datasource.url=jdbc:mysql://localhost:3306/bonnesante
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
